--- a/MathFromString/MathFromString.csproj
+++ b/MathFromString/MathFromString.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Jace" Version="0.9.3" />
+    <PackageReference Include="ncalc" Version="1.3.8" />
+  </ItemGroup>
+
 </Project>
